--- a/src/APP/App.css
+++ b/src/APP/App.css
@@ -11,3 +11,9 @@
   display: flex;
   flex-direction: column;
 }
+
+.center{
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
