--- a/src/APP/App.css
+++ b/src/APP/App.css
@@ -1,7 +1,24 @@
 *{
   margin:0px;
   padding:0px;
+
 }
+
+.App{
+  width: 100vw;
+  height: 100vh;
+}
+
+.dark1{
+  background-color: #313131;
+}
+.dark2{
+  background-color: #414141;
+}
+.dark3{
+  background-color: whitesmoke;
+}
+
 
 .flexH{
   display: flex;
@@ -13,6 +30,7 @@
 }
 
 .center{
+  display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
