--- a/src/COMPONENTS/menu/Menu.css
+++ b/src/COMPONENTS/menu/Menu.css
@@ -12,35 +12,46 @@
 }
 
 
+/*----------------  MENU VERTICAL -------------------*/
 
 
 
-
-.menu{
+.menu{ /*Contient le menu et la croix close*/
+    width: 70%;
+    max-width: 300px;
     position: absolute;
     float: left;
 }
-.logo{
-    width: 170px;
-    margin: 0 auto;
-}
-.menuContainer{
+
+.menuContainer{/*Menu*/
+    width: 80%;
+    max-width: 200px;
     animation: 3s linear 1s infinite running slidein;
-    border-right: 2px solid #007cba;
-    background-color: #fbfbfb;
+    border-right: 2px solid #ccc;
     height: 100vh;
     padding: 10px;
     transition:  100s;
     transition-timing-function: linear;
 }
 
-.closed{
-    width: 0px;
-}
-.opened{
-    width: 200px;   
-}
 
+
+.UsrImgContainer{
+    margin: 40px auto;
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    background-color: #fff;
+}
+.UsrImg{
+    border: 3px solid #ccc;
+    width: 110px;
+    height: 110px;
+    border-radius: 50%;
+}
+.logo{
+    width: 170px;
+}
 
 /*Nom et Prenoms*/
 .userName,.userFirstname{
@@ -52,17 +63,73 @@
 }
 
 /*Option du menu*/
-.MenuOption{
+.menuOptions{
+    color: whitesmoke;
+    text-align: center;
+    list-style-image: -webkit-image-set();
     padding: 10px;
     margin: 0px auto;
-    border-top: 1px solid #9198e5;
+
+}
+.menuOptions li{
+    display: flex;
+    list-style-type: none;
+    height: 30px;
+    padding: 10px;
+    padding-left: 30px;
+    text-align: center;
+    align-items: center;
+}
+.menuOptions li a{
+    text-decoration: none;
+    color: whitesmoke;
+    text-align: center;
+    list-style-image: -webkit-image-set();
+    padding: 10px;
+
+
+}
+.accueil{
+
+    background-image: url("../../MEDIAS/Acceuil.png");
+    background-repeat: no-repeat;
+    background-position: left;
+    background-size: 30px;
+}
+
+.contact{
+    background-image: url("../../MEDIAS/Contacts.png");
+    background-repeat: no-repeat;
+    background-position: left;
+    background-size: 30px;
+}
+
+.ressources{
+    background-image: url("../../MEDIAS/Ressource.png");
+    background-repeat: no-repeat;
+    background-position: left;
+    background-size: 30px;
 }
 
 .MenuOption:nth-child(1){
     margin-top: 20px;
 }
 
+/* log media*/
+.media{
+    position: absolute;
+    bottom: 10px;
+    margin: 100px auto;
+    display: flex;
+    justify-content: space-between;
+    
 
+}
+.media img{
+    padding: 5px;
+    width: 30px;
+    height: 30px;
+}
 
 /*RESPONSIVE*/
 @media screen and (max-width:500px){
@@ -70,19 +137,16 @@
     .toggleMenu{
         
         transition: 0.4s;
-        padding: 5px;
         width: 50px;
-        height: 50px;
-    
-    
+        height: 50px; 
     }
+
     .l{margin-left: 5px;}
     .t{margin-top: 5px;}
     .nav-btn-span{
 
         width: 5px;
         height: 5px;
-        background-color: rgb(27, 2, 2);
         
     
     }
@@ -95,7 +159,7 @@
         width: 40px;
         height: 5px;
         margin: 5px auto;
-        background-color: rgb(27, 2, 2);
+       
     }
     .change:nth-child(1){
 
