--- a/src/COMPONENTS/menu/Menu.css
+++ b/src/COMPONENTS/menu/Menu.css
@@ -5,7 +5,7 @@
     top: 0;
     left: 0;
     right: 0;
-    box-shadow: 1px 2px 3px #ccc;
+    box-shadow: 1px 2px 3px transparent;
     display: flex;
     align-items: center;
     
