--- a/src/COMPONENTS/menu/Menu.css
+++ b/src/COMPONENTS/menu/Menu.css
@@ -7,8 +7,16 @@
     right: 0;
     box-shadow: 1px 2px 3px transparent;
     display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
     align-items: center;
     
+}
+.LOGO{
+    margin-left: 20px;
+    font-weight: bold;
+    color: thistle;
+    font-size: large;
 }
 
 
@@ -134,7 +142,7 @@
 @media screen and (max-width:500px){
  
     .toggleMenu{
-        
+        float: right;
         transition: 0.4s;
         width: 50px;
         height: 50px; 
@@ -149,29 +157,6 @@
         
     
     }
-    .dimiss{
-        display: none;
-    }
-    .change {
-
-        
-        width: 30px;
-        height: 5px;
-        margin: 5px auto;
-       
-    }
-    .change:nth-child(1){
-
-        -webkit-transform: rotate(-45deg) translate(-8px, 8px);
-         transform: rotate(-45deg) translate(-14px, 12px);
-    }
-    .change:nth-child(2){
-        opacity: 0;
-    }
-    .change:nth-child(3){
-
-        -webkit-transform: rotate(45deg) translate(-8px, -8px);
-        transform: rotate(45deg) translate(-8px, -8px);
-    }
+  
     
 }
